Fix to ensure rectangular generated images are not cropped on web app
Previously non-square images would get cropped when being displayed on
web app

--- a/src/interface/web/app/components/chatMessage/chatMessage.module.css
+++ b/src/interface/web/app/components/chatMessage/chatMessage.module.css
@@ -127,7 +127,9 @@ div.imageWrapper img {
 }
 
 div.khoj div.imageWrapper img {
-    height: 512px;
+    max-height: 512px;
+    height: auto;
+    object-fit: contain;
 }
 
 div.khoj div.imageWrapper {
